Fixed Close Icon adjusting to window size
Increased modal window height

Adjusted modal window banner to display properly on mobile

Added margin to avoid text overlapping on ios

--- a/css/card.css
+++ b/css/card.css
@@ -141,6 +141,13 @@ div#afl p {
     .card-content{
         display: none;
     }
+    .modal-item .banner {
+        min-height: 60%;
+    }
+}
+
+.card-mobile div.text{
+    margin:1px;
 }
 
 
